fixed minor issue with categories that are too long for the sidebar

--- a/web-app/css/openboxes.css
+++ b/web-app/css/openboxes.css
@@ -1136,6 +1136,26 @@ button.action-btn, button.previous, button.next {
 .product-details .value { width: 150px; }
 */
 .product-details .button { width: 20px; }
+
+
+.dont-break-out {
+    /* These are technically the same, but use both */
+    overflow-wrap: break-word;
+    word-wrap: break-word;
+
+    -ms-word-break: break-all;
+    /* This is the dangerous one in WebKit, as it breaks things wherever */
+    word-break: break-all;
+    /* Instead use this non-standard one: */
+    word-break: break-word;
+
+    /* Adds a hyphen where the word breaks, if supported (No Blink) */
+    -ms-hyphens: auto;
+    -moz-hyphens: auto;
+    -webkit-hyphens: auto;
+    hyphens: auto;
+}
+
 /* Text Alignment classes */
 .right { text-align: right; }
 .left { text-align: left; }
